feat(upload): enhance file upload handling and logging
- Ensure broad permissions for staging directory and uploaded files to facilitate systemd operations.
- Introduce a helper function to remove accents from strings for consistent file naming.
- Implement logging of uploaded files into `arquivo_log` with status 'enfileirado', capturing relevant metadata.
- Add functionality to handle PDF uploads, including naming conventions and status updates for specific functions.
- Update HTML form to include collaborator ID for tracking purposes.
- Upgrade `predis/predis` to version 3.3.0 and add `psr/http-message` as a dependency.
- Refactor error handling in Composer's autoload files to use `trigger_error` for better error reporting.

--- a/upload_test.html
+++ b/upload_test.html
@@ -110,6 +110,7 @@
             <input type="hidden" name="primeiraPalavra" value="Teste">
             <input type="hidden" name="nome_imagem" value="01.Teste">
             <input type="hidden" name="status_nome" value="R01">
+            <input type="hidden" name="idcolaborador" value="9">
 
             <div class="actions">
                 <button type="submit">Enviar (form tradicional)</button>
